src/user.css
/* ... */
.desktoproutes-homepage-takeover-ad-hptoComponent-parentContainer,
.desktoproutes-homepage-takeover-ad-hptoComponent-container,
.main-leaderboardComponent-container {
  display: none !important;
}

.main-topBar-UpgradeButton {
  display: none !important;
}

/* play buttons */

[dir='ltr'] .main-card-PlayButtonContainer {
  filter: drop-shadow(0 0 5px rgba(0 0 0 / 30%));
}

.main-card-imageContainer > .main-card-PlayButtonContainer > .main-playButton-PlayButton > button {
  background-color: white !important;
}

.main-playButton-button,
.main-playButton-PlayButton > button,
.main-trackList-rowPlayPauseButton {
  background-color: var(--spice-text) !important;
  -webkit-mask-image: url('https://nimsandu.github.io/spicetify-bloom/assets/fluentui-system-icons/ic_fluent_play_24_filled.svg');
}

.main-playButton-PlayButton:focus,
.main-playButton-PlayButton:hover {
  background-color: transparent;
}

.main-playButton-PlayButton > button {
  width: 40px;
  height: 40px;
}

.main-playButton-PlayButton > button > span {
  display: none;
}

/* error content */

.main-pageErrorTemplate-errorBody {
  min-height: calc((100vh - 64px) - 105px);
}

.main-pageErrorTemplate-errorBody svg {
  margin: 0;
}

/* spicetify */

#spicetify-sidebar-config {
  flex-direction: column;
  top: -60px !important;
}

#spicetify-show-list > * {
  padding: 0px;
}

.toggle-module__toggle-input___ceLM4_marketplace:checked
  ~ .toggle-module__toggle-indicator-wrapper___6Lcp0_marketplace {
  background-color: var(--spice-accent);
}

.toggle-module__toggle-indicator___nCxwE_marketplace {
  background: var(--spice-card) !important;
}

.marketplace-card--installed {
  border: 1px rgba(var(--spice-rgb-accent), 0.7) solid !important;
}

button.arrow-btn {
  background-color: var(--spice-selected-row);
  color: var(--spice-text);
}

/* spicetify extensions */

.main-topBar-button[title='Popup Lyrics'],
.main-topBar-button[title='Full App Display'],
.main-topBar-button[title='Bookmark'] {
  background-color: var(--spice-card) !important;
}

.a2ruVaZt_DdrdHz3GqgU,
.x-categoryCard-CategoryCard {
  color: var(--spice-alt-text);
}

.UyzJidwrGk3awngSGIwv,
.main-addButton-button[aria-checked='false'] {
  color: var(--spice-text);
}

/* New lyrics style */

:root {
  --lyrics-text-direction: left;
}

/* Needed for lyrics cinema */
.Root__top-bar {
  z-index: 5 !important;
  display: unset !important;
}

.main-lyricsCinema-controls {
  top: 80px !important;
}

#lyrics-backdrop {
  position: absolute;
  width: 100%;
  height: 100%;
}

#lyrics-backdrop-container {
  position: absolute;
  width: 100%;
  height: 100%;
  background-color: var(--spice-main);
}

.lyrics-lyrics-background {
  visibility: hidden !important;
}

.lyrics-lyrics-container {
  --lyrics-color-active: rgb(255, 255, 255) !important;
  --lyrics-color-inactive: rgba(255, 255, 255, 0.35) !important;
  --lyrics-color-passed: rgba(255, 255, 255, 0.8) !important;
  --lyrics-color-messaging: rgba(255, 255, 255, 0.45) !important;
}

.lyrics-lyricsContent-lyric {
  opacity: 0;
  visibility: hidden;
  animation-fill-mode: forwards;
  transform-origin: var(--lyrics-text-direction);
  margin: 0.3rem 0;
  text-shadow: none;
  transition: text-shadow 100ms ease, color 100ms ease;
}

/* lyrics not available message */
.C3pBU1DsOUJJOAv89ZFT {
  color: var(--lyrics-color-passed) !important;
  opacity: 0;
  animation: reveal 400ms ease forwards;
}

@keyframes reveal {
  from {
    opacity: 0;
  }
  
  to {
    opacity: 1;
    visibility: visible;
  }
}

.lyrics-lyricsContent-lyric:hover {
  color: var(--lyrics-color-active) !important;
}

.lyrics-lyricsContent-active {
  text-shadow: 0 0 15px rgba(255, 255, 255, 0.6);
  max-width: var(--lyrics-active-max-width);
}

@media (min-width: 1920px) {
  .lyrics-lyricsContent-lyric {
    transform: scale(1);
    transition: transform 400ms ease, text-shadow 400ms ease, color 50ms ease;
  }

  .lyrics-lyricsContent-active {
    transform: scale(1.1);
  }

  .lyrics-lyricsContent-isInteractive:active {
    transform: scale(0.9);
  }

  .lyrics-lyricsContent-isInteractive.lyrics-lyricsContent-active:active {
    transform: scale(0.8);
  }
}

.main-nowPlayingView-section .lyrics-lyricsContent-lyric {
  transform: unset;
}

/* New Lyrics Plus style */

.lyrics-lyricsContainer-LyricsBackground {
  display: none !important;
}

/* hide horizontal scrollbar */
.lyrics-lyricsContainer-LyricsContainer,
.lyrics-lyricsContainer-SyncedLyricsPage {
  overflow-x: hidden;
}

.lyrics-lyricsContainer-LyricsContainer {
  --lyrics-color-active: white !important;
  --lyrics-color-inactive: rgba(255, 255, 255, 0.5) !important;
}

.lyrics-lyricsContainer-LyricsLine {
  text-shadow: none;
}

.lyrics-lyricsContainer-SyncedLyrics .lyrics-lyricsContainer-LyricsLine {
  transition-property: transform, color, opacity, text-shadow !important;
}

.lyrics-lyricsContainer-Karaoke-Word {
  transition: var(--word-duration) color ease, var(--word-duration) text-shadow ease !important;
  text-shadow: none;
}

.lyrics-lyricsContainer-Karaoke-WordActive,
.lyrics-lyricsContainer-SyncedLyrics .lyrics-lyricsContainer-LyricsLine-active {
  text-shadow: 0 0 15px rgba(255, 255, 255, 0.6);
}

.lyrics-lyricsContainer-LyricsUnavailableMessage {
  color: rgba(255, 255, 255, 0.4) !important;
}

.lyrics-lyricsContainer-Provider {
  background: none !important;
}

/* lyrics pages fix */

.main-lyricsCinema-nonDisplayedArea .main-topBar-topbarContent {
  display: none;
}

.lyrics-lyrics-container {
  margin-top: 0;
}

.lyrics-lyricsContainer-LyricsBackground {
  margin-bottom: -110px;
  margin-top: -10px;
}

.lyrics-lyricsContainer-Provider {
  padding-bottom: 40px;
}

#lyrics-fullscreen-container
  > .lyrics-lyricsContainer-LyricsContainer:has(.lyrics-lyricsContainer-UnsyncedLyricsPage)
  .lyrics-lyricsContainer-Provider {
  padding-bottom: 35px;
}

.nav-ylx .lyrics-lyricsContainer-LyricsUnsyncedPadding {
  height: 20vh;
}

.lyrics-config-button-container {
  bottom: 15px;
}
/* ... */

